addd related line + fix search
